--- a/firstVaadinApp/pom.xml
+++ b/firstVaadinApp/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.omar</groupId>
-	<artifactId>prueba1</artifactId>
+	<groupId>com.perceptiva</groupId>
+	<artifactId>firstVaadinApp</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>prueba1</name>
+	<name>firstVaadinApp</name>
 
 	<prerequisites>
 		<maven>3</maven>
